@@ -37,7 +37,7 @@ JSON::MaybeXS = 1.001 ; for hash constructor
 perl          = 5.010001
 
 [Prereqs / Recommends]
-Cpanel::JSON::XS = 3.0111 ; inf/nan handled correctly
+Cpanel::JSON::XS = 3.0112 ; inf/nan handled correctly
 
 [Prereqs / TestRequires]
 Test::More            = 0.88 ; for done_testing
